2001-04-18  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 7999, "Disks" desktop submenu lacks "Floppy" item
	
	* libnautilus-extensions/nautilus-volume-monitor.c:
	(mount_volume_get_name), (mount_volume_auto_add),
	(mount_volume_add_filesystem):
	Handle "auto" types by using a placeholder volume
	type.
	
	* libnautilus-extensions/nautilus-volume-monitor.h:
	Add a new type NAUTILUS_VOLUME_AUTO to handle
	auto fstab entries.  This is really a placeholder
	type to be used by the code that creates the removable
	volume list.  When the volume is actually mounted, the
	file system type is loaded from /proc/mounts.
	
2001-04-18  Gene Z. Ragan  <gzr@eazel.com>

	Fix bug 8102, with Nautilus running, CDs get ejected
	(wrong and makes the kernel unhappy)
	
	* libnautilus-extensions/nautilus-volume-monitor.c:
	(mount_volume_iso9660_add):
	Remove ioctls that are not needed and may cause the
	cd to allow ejecting even with a mounted volume.

2001-04-18  Josh Barrow  <josh@whitecape.org>

	* po/POTFILES.in:
	Removed fm-icon-text-window.c from this file to fix build horkage 
	I was seeing.

2001-04-18  Ramiro Estrugo  <ramiro@eazel.com>

	* libnautilus-extensions/nautilus-global-preferences.h:
	Remove NAUTILUS_PREFERENCES_ICON_CAPTIONS, its not needed anymore.

	* libnautilus-extensions/nautilus-global-preferences.c:
	(global_preferences_populate_pane): Add support for installing a
	list if strings to ignore when enforcing the unique choice rule
	for enumeration lists items.
	(global_preferences_create_dialog),
	(nautilus_global_preferences_initialize): Register the
	enumerations at initialization time instead of dialog creation
	time.  This is needed so that sanity checking on enumeration
	preferences can occur even if the user hasnt opened the dialog.

	* libnautilus-extensions/nautilus-preferences-item.h:
	* libnautilus-extensions/nautilus-preferences-item.c:
	(nautilus_preferences_item_initialize_class),
	(nautilus_preferences_item_initialize), (preferences_item_destroy),