@@ -1,4 +1,12 @@
 2001-04-18  Gene Z. Ragan  <gzr@eazel.com>
+	
+	Fixed bug 7925, Nautilus prevents playing audio cds.
+	
+	* libnautilus-extensions/nautilus-volume-monitor.c:
+	Disable the audio cd mounting while I work at making
+	it more seamless.
+
+2001-04-18  Gene Z. Ragan  <gzr@eazel.com>
 
 	Fixed bug 7999, "Disks" desktop submenu lacks "Floppy" item
 	
